apps/k8s/knarr/sonarr-anime/sonarr-anime.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-anime
  namespace: knarr
  labels:
    app: sonarr-anime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr-anime
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr-anime
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: sonarr-anime
        image: lscr.io/linuxserver/sonarr:latest
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c
                - ln -sf /app/sonarr/bin/UI/sonarr /app/sonarr/bin/UI/crunchy
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: sonarr-anime-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-anime
  namespace: knarr
spec:
  selector:
    app: sonarr-anime
  ports:
  - port: 80
    targetPort: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-anime-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Sonarr Anime"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "sonarr.png"
    gethomepage.dev/description: "Anime series manager"
spec:
  rules:
  - host: anime.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-anime
            port:
              number: 80
